# ckb-smt-tool

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
contracts/demo-check-data/: Cargo.toml  README.md
contracts/demo-check-data/src/: entry.rs  error.rs  main.rs
contracts/demo-onchain-kvstore/: Cargo.toml  Makefile  README.md
contracts/demo-onchain-kvstore/src/: entry.rs  error.rs  main.rs
contracts/demo-onchain-kvstore/src/operations/: create.rs  destroy.rs  mod.rs  update.rs
crates/ckb-smt-tool/: Cargo.toml  Makefile  README.md
crates/ckb-smt-tool/schemas/: types.mol
crates/ckb-smt-tool/src/: lib.rs
crates/ckb-smt-tool/src/error/: mod.rs  prover.rs  verifier.rs
crates/ckb-smt-tool/src/types/: generated.rs  mod.rs  prover.rs  verifier.rs
tests/: Cargo.toml
tests/src/: lib.rs  prelude.rs  utilities.rs
tests/src/contracts/: demo_check_data.rs  mod.rs
tests/src/contracts/demo_onchain_kvstore/: create.rs  destroy.rs  update.rs
