[workspace]
resolver = "2"

members = [
  "crates/ckb-smt-tool",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/demo-check-data",
  "contracts/demo-onchain-kvstore",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
